--- a/production.ini
+++ b/production.ini
@@ -14,7 +14,9 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
-sqlalchemy.url = sqlite:///%(here)s/easytan.sqlite
+sqlalchemy.url = sqlite:///%(here)s/tan.db
+mako.directories = easytan:templates
+mako.module_directory = easytan:templates/__compile_
 
 [server:main]
 use = egg:waitress#main
