Met à jour setup.py suite suppression READ et CHANGES

--- a/production.ini
+++ b/production.ini
@@ -16,7 +16,7 @@ pyramid.includes =
 
 sqlalchemy.url = sqlite:///%(here)s/tan.db
 mako.directories = easytan:templates
-mako.module_directory = easytan:templates/__compile_
+mako.module_directory = easytan:templates/__compile__
 
 [server:main]
 use = egg:waitress#main
