--- a/development.ini
+++ b/development.ini
@@ -46,7 +46,8 @@ keys = console
 keys = generic
 
 [logger_root]
-level = INFO
+level = WARN
+# level = INFO
 handlers = console
 
 [logger_easytan]
