Ajoute fichiers Docker

--- a/development.ini
+++ b/development.ini
@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = sqlite:///%(here)s/tan.db
+sqlalchemy.url = sqlite:////db/tan.db
 mako.directories = easytan:templates
 
 # By default, the toolbar only appears for clients from IP addresses
@@ -27,9 +27,9 @@ mako.directories = easytan:templates
 ###
 
 [server:main]
-use = egg:waitress#main
+use = egg:gunicorn#main
 host = 0.0.0.0
-port = 6543
+port = 9876
 
 ###
 # logging configuration
