Améliore exécution en production

--- a/production.ini
+++ b/production.ini
@@ -14,14 +14,14 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
-sqlalchemy.url = sqlite:///%(here)s/tan.db
+sqlalchemy.url = sqlite:////db/tan.db
 mako.directories = easytan:templates
 mako.module_directory = easytan:templates/__compile__
 
 [server:main]
-use = egg:waitress#main
+use = egg:gunicorn#main
 host = 0.0.0.0
-port = 6543
+port = 9876
 
 ###
 # logging configuration
