--- a/development.ini
+++ b/development.ini
@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = sqlite:////db/tan.db
+sqlalchemy.url = sqlite:///db/tan.db
 mako.directories = easytan:templates
 
 # By default, the toolbar only appears for clients from IP addresses
@@ -27,7 +27,8 @@ mako.directories = easytan:templates
 ###
 
 [server:main]
-use = egg:gunicorn#main
+#use = egg:gunicorn#main
+use = egg:waitress#main
 host = 0.0.0.0
 port = 9876
 
