--- a/production.ini
+++ b/production.ini
@@ -14,9 +14,9 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
-sqlalchemy.url = sqlite:////db/tan.db
+sqlalchemy.url = sqlite:///db/tan.db
 mako.directories = easytan:templates
-mako.module_directory = easytan:templates/__compile__
+# mako.module_directory = easytan:templates/__compile__
 
 [server:main]
 use = egg:gunicorn#main
