Adapte production.ini

--- a/production.ini
+++ b/production.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
-sqlalchemy.url = sqlite:///db/tan.db
+sqlalchemy.url = sqlite:////db/tan.db
 mako.directories = easytan:templates
 # mako.module_directory = easytan:templates/__compile__
 
